src/components/ourWork.module.scss
.ourWork {
    &__block {
        > div > div {
            padding: 136px 0px !important;
            @include respond-to("<=s") {
                padding: 72px 16px !important;
            }
        }
        &__heading {
            display: grid;
            grid-template-columns: 2fr 1fr;
            @include respond-to("<=xs") {
                grid-template-columns: 1fr;
                padding-bottom: 56px;
            }
            p {
                font-size: 20px;
                line-height: 30px;
            }
            &__btn {
                justify-self: end;
                width: auto;
                height: 38px;
                background: $color-btn-default;
                font-weight: 400;
                font-size: 14px;
                line-height: 22px;
                color: white;
                padding: 8px 16px;
                cursor: pointer;
                text-align: center;            
                &:hover {
                    background-color: $color-btn-hover;
                }
                @include respond-to("<=xs") {
                    justify-self: start;
                }
                @include respond-to("xxxl") {
                    transform: translateX(180px);
                }
            }
        }        
        &__grid {
            display: grid;
            grid-template-columns: 1fr 1fr;
            gap: 32px;
            @include respond-to("<=s") {
                grid-template-columns: 1fr;
                justify-items: center;
            }
            a {
                text-decoration: none;
            }         
            span {                
                max-width: 568px;
                @include respond-to("<=s") {
                    max-width: 384px;
                }
                @include respond-to("xxs") {
                    max-width: 343px;
                }
            }   
            &__full {
                &__item {
                    display: grid;    
                    gap: 16px; 
                    transition: .2s ease-in;
                    &:hover {
                        filter: grayscale(1);                        
                    }
                    &__img{
                        position: relative;
                        width: 568px;
                        height: 568px;
                        @include respond-to("l") {
                            width: 464px;
                            height: 568px;
                        }
                        @include respond-to("m") {
                            width: 352px;
                            height: 446px;
                        }
                        @include respond-to("<=s") {
                            width: 384px;
                            height: 400px;
                        }
                        @include respond-to("xxs") {
                            width: 343px;
                            height: 400px;
                        }
                        img {
                            object-fit: cover;
                        }
                    }                    
                }
            }
            &__half {          
                display: grid;    
                gap: 32px;  
                grid-template-rows: min-content min-content;
                &__item {
                    display: grid;    
                    gap: 16px;
                    transition: .2s ease-in;
                    &:hover {
                        filter: grayscale(1);
                    }
                    &__img {
                        position: relative;
                        width: 568px;
                        height: 218px;
                        @include respond-to("l") {
                            width: 464px;
                            height: 222px;
                        }
                        @include respond-to("m") {
                            width: 352px;
                            height: 175px;
                        }
                        @include respond-to("<=s") {
                            width: 384px;
                            height: 400px;
                        }
                        @include respond-to("xxs") {
                            width: 343px;
                            height: 400px;
                        }
                        img {
                            object-fit: cover;
                        }
                    }                   
                }
            }
        }
    }
}

